# python_uwazi_API

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  _version.py  api_testing.py  dev-requirements.txt  docker-compose.yml  justfile  opencode.json  probe_style_values.py  pyproject.toml  requirements.txt  upload_entity_to_localhost.py  uwazi_csv_conventions.md
uwazi_API.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
uwazi_agent/: configuration.py  logging_config.py
uwazi_agent/adapters/: property_type_mapper.py  template_mapper.py  thesauri_mapper.py  uwazi_api_adapter.py
uwazi_agent/domain/: agent_entity.py  agent_entity_create.py  agent_entity_mutation_result.py  agent_entity_search_result.py  agent_entity_summary.py  agent_page.py  agent_page_create.py  agent_page_menu_link.py  agent_page_menu_link_result.py  agent_page_mutation_result.py  agent_page_summary.py  agent_page_update.py  agent_property.py  agent_property_style.py  agent_property_type.py  agent_property_type_formats.py  agent_publish_status.py  agent_relationship_create.py  agent_relationship_mutation_result.py  agent_relationship_type.py  agent_search_filter.py  agent_template.py  agent_thesauri.py
uwazi_agent/ports/: entity_api_port.py  llm_port.py  mapper_port.py  page_api_port.py  relationship_api_port.py  relationship_type_api_port.py  settings_api_port.py  stats_api_port.py  template_api_port.py  template_mapper_port.py  thesauri_api_port.py  thesauri_mapper_port.py  uwazi_api_port.py
uwazi_agent/tests/: test_add_page_menu_links.py  test_create_page.py  test_entity_agent_optimizations.py  test_entity_api_adapter_e2e.py  test_entity_mapper_value_shapes.py  test_entity_store.py  test_entity_store_shape.py  test_logging_config.py  test_menu_links_adapter_e2e.py  test_nested_property_type.py  test_orchestrator_property_type_knowledge.py  (+8 more)
uwazi_api/: CSV.py  Entities.py  Files.py  Reference.py  Relationships.py  Settings.py  Templates.py  Thesauris.py  UwaziAdapter.py  UwaziRequest.py  __init__.py  client.py  iso_639_choices.py  request_retry.py
(+185 files in other folders)
