[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=7.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uwazi-API"
dynamic = ["version"]
description = "A Python module for Uwazi"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [
    {name = "Ali Altıparmak", email = "ali6parmakk@gmail.com"},
    {name = "Gabriel Piles"}
]
requires-python = ">=3.8"
dependencies = [
    "requests==2.32.5",
    "urllib3==2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.12.5"
]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/huridocs/python_uwazi_API"
Documentation = "https://github.com/huridocs/python_uwazi_API"
Repository = "https://github.com/huridocs/python_uwazi_API"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["uwazi_api*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.json", "*.xml"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "./_version.py"

[tool.black]
line-length = 125
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 125

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lxml.*",
]
ignore_missing_imports = true
